--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -13,7 +13,7 @@
         background: rgb(0,212,255);
         background: radial-gradient(circle, rgba(0,212,255,1) 0%, rgba(2,0,36,1) 70%, rgba(121,16,9,1) 100%);
     }
-    .my-grab-2{
+    .my-grad-2{
         background: rgb(121,16,9);
         background: radial-gradient(circle, rgba(121,16,9,1) 0%, rgba(2,0,36,1) 70%, rgba(0,212,255,1) 100%);
     }
