--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,3 +1,6 @@
+.myJumbo{
+    background: fixed lightblue;
+}
 .my-grad-1{
     background: rgb(2,0,36);
     background: radial-gradient(circle, rgba(2,0,36,1) 35%, rgba(121,16,9,1) 70%, rgba(0,212,255,1) 100%);
